[package]
name = "zarr-rechunking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
blosc = "0.1.3"
clap = { version = "4.2.7", features = ["derive"] }
glob = "0.3.1"
json = "0.12.4"
rayon = "1.7.0"
regex = "1.8.1"
thiserror = "1.0.40"
